--- a/templates/map.html
+++ b/templates/map.html
@@ -7,7 +7,7 @@
     <title>Local Schools</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
         integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfkEcB3rZy-QVkZAAPHMkAQIizeLaXOW8&callback=initMap"
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=API_KEY&callback=initMap"
         type="text/javascript"></script>
 
     <script type="text/javascript">
