--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
         }       
     </style>
     <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfkEcB3rZy-QVkZAAPHMkAQIizeLaXOW8&libraries=drawing"></script>
+        src="https://maps.googleapis.com/maps/api/js?key=API_KEY&libraries=drawing"></script>
     <script src="../static/js/map.js"></script>
 </head>
 
